--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -133,7 +133,6 @@ img {
   background-image: url("../images/Group\ 14.png");
   background-repeat: no-repeat;
   background-size: 50% 100%;
-  /* background-size: cover; */
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
 }
 .banner-area-container {
@@ -147,6 +146,7 @@ img {
   display: flex;
   align-items: center;
   text-align: left;
+  order: 1;
 }
 .banner-heading {
   background-image: var(--text-gradient);
@@ -159,7 +159,6 @@ img {
   color: var(--primary-color);
   font-size: var(--fs-mdm);
   margin-bottom: 10px;
-  /* margin-left: 20px; */
 }
 .banner-text-unit .fa-solid {
   margin-right: 10px;
@@ -195,6 +194,7 @@ img {
 }
 .banner-image-container {
   width: 50%;
+  order: 2;
 }
 .banner-image-container img {
   display: block;
@@ -440,4 +440,7 @@ img {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
   font-size: 16px;
+}
+.hide {
+  display: none;
 }
