--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -81,12 +81,46 @@
   bottom: 40px;
   left: -50px;
 }
-.game-type-container{
-  display: flex;
-  flex-wrap: wrap;
+
+.game-type-area{
+  padding: 5px;
 }
 .game-type-container{
-  width: 100%;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+}
+.one{
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+.two{
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+.three{
+  grid-column: 3/4;
+  grid-row: 1/2;
+} .four{
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+ .five{
+  grid-column: 2/3;
+  grid-row: 2/3;
+ } .six{
+  grid-column: 3/4;
+  grid-row: 2/3;
+ } .seven{
+  grid-column: 1/2;
+  grid-row: 3/4;
+ } .eight{
+  grid-column: 2/3;
+  grid-row: 3/4;
+ } .nine{
+  grid-column: 3/4;
+  grid-row: 3/4;
 }
 .type-button-container {
   gap: 5px;
@@ -108,8 +142,9 @@
   margin: 0 auto 50px;
 }
 .footer-social-container{
-  width: 40%;
-  gap: 30px;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(3, 1fr);
 }
 .footer-area-container .footer-logo{
   max-width: 100%;
@@ -166,6 +201,10 @@
     flex-wrap: wrap;
     margin-bottom: 30px;
   }
+  .footer-social-container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
   
 
 
